[package]
name = "TurboLP"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
regex = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
csv = "1"
flate2 = { version = "1", features = ["rust_backend"] }
memchr = "2"